<resources>
    <string name="app_name">Projet</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="nomjoueur">nomJoueur</string>
    <string name="quiz_di_foutiball">QUIZ DI FOUTIBALL</string>
    <string name="soundboard">soundboard</string>
    <string name="quiz">quiz</string>
    <string name="profil">Profil</string>
    <string name="equipes">Equipes</string>
    <string name="contacts">Contacts</string>
    <string name="foutibal">Foutibal</string>
    <string name="logo_de_football">logo de football</string>
    <string name="histoire">Histoire</string>
    <string name="jeu_ballon">Jeu ballon</string>
    <string name="application_cr_e_par_antoine_th_ologien_dans_le_cadre_d_info0306">Application Créée par Antoine Théologien dans le cadre d\'Info0306</string>
    <string name="cliquez_sur_une_image_pour_jouer_le_son">Cliquez sur une image pour jouer le son</string>
    <string name="todo">TODO</string>
</resources>