<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/terrain"
    tools:context=".MainActivity">

    <!--Layout pour l'activité principale-->
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical"
        tools:ignore="MissingConstraints"
        tools:layout_editor_absoluteX="0dp"
        tools:layout_editor_absoluteY="97dp">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="58dp"
            android:layout_gravity="center_horizontal"
            android:layout_marginTop="30dp"
            android:fontFamily="@font/modak"
            android:text="@string/foutibal"
            android:textColor="#F7BB00"
            android:textSize="50sp" />

        <ImageView
            android:id="@+id/imageView3"
            android:layout_width="131dp"
            android:layout_height="91dp"
            android:layout_gravity="center_horizontal"
            android:contentDescription="@string/logo_de_football"
            app:srcCompat="@drawable/applogo" />

        <!--Boutons pour accéder aux activité-->
        <Button
            android:id="@+id/Soundboard"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center_horizontal"
            android:backgroundTint="#FFEB3B"
            android:onClick="openSoundboard"
            android:text="@string/soundboard"
            android:textColor="#2D672F"
            tools:ignore="UsingOnClickInXml" />


        <Button
            android:id="@+id/quiz"
            android:layout_width="87dp"
            android:layout_height="48dp"
            android:layout_gravity="center_horizontal"
            android:layout_marginTop="15dp"
            android:backgroundTint="#FFEB3B"
            android:foregroundTint="#36F465"
            android:onClick="openQuiz"
            android:text="@string/quiz"
            android:textColor="#2D672F"
            android:visibility="visible"
            tools:ignore="UsingOnClickInXml" />

        <Button
            android:id="@+id/team"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center_horizontal"
            android:layout_marginTop="15dp"
            android:backgroundTint="#FFEB3B"
            android:onClick="openTeam"
            android:text="@string/equipes"
            android:textColor="#2D672F"
            tools:ignore="HardcodedText,UsingOnClickInXml" />

        <Button
            android:id="@+id/histoire"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center_horizontal"
            android:layout_marginTop="15dp"
            android:backgroundTint="#FFEB3B"
            android:onClick="openHistoire"
            android:text="@string/histoire"
            android:textColor="#2D672F"
            tools:ignore="UsingOnClickInXml" />

        <Button
            android:id="@+id/balle"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center_horizontal"
            android:layout_marginTop="15dp"
            android:backgroundTint="#FFEB3B"
            android:onClick="openBalle"
            android:text="@string/jeu_ballon"
            android:textColor="#2D672F"
            tools:ignore="UsingOnClickInXml" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center_horizontal"
            android:layout_marginTop="20dp"
            android:fontFamily="@font/autour_one"
            android:text="@string/application_cr_e_par_antoine_th_ologien_dans_le_cadre_d_info0306"
            android:textAlignment="center"
            android:textColor="#F7BB00"
            android:textSize="18sp"
            android:textStyle="bold" />

    </LinearLayout>


</androidx.constraintlayout.widget.ConstraintLayout>